syntax = "proto3";

package auth;

message User {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string message = 1;
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    int64 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
}

message UpdateUserResponse {
    string message = 1;
}

message DeleteUserRequest {
    string username = 1;
}

message DeleteUserResponse {
    string message = 1;
}

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc GetUserByUsername(GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
    rpc DeleteUserByUsername(DeleteUserRequest) returns (DeleteUserResponse);
}
